--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: datiRendistat
 Type: Package
 Title: I dati dell'indagine Rendistat
-Version: 0.1.0
+Version: 0.2.0
 Author: Who wrote it
 Maintainer: The package maintainer <raffaele.morelli@isprambiente.it>
-Description: More about what it does (maybe more than one line)
+Description: I dati dell'indagine RendiSTAT condotta nel 2016
     Use four spaces when indenting paragraphs within the Description.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Depends: 
     R (>= 2.10)
 Imports: 
